logs/pypoet.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/backpack'...
Listing './lib/python3.5/site-packages/backpack/_utils'...
Listing './lib/python3.5/site-packages/backpack/collections'...
Listing './lib/python3.5/site-packages/backpack-0.1.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cleo'...
Listing './lib/python3.5/site-packages/cleo/commands'...
Listing './lib/python3.5/site-packages/cleo/commands/completions'...
Listing './lib/python3.5/site-packages/cleo/descriptors'...
Listing './lib/python3.5/site-packages/cleo/exceptions'...
Listing './lib/python3.5/site-packages/cleo/formatters'...
Listing './lib/python3.5/site-packages/cleo/helpers'...
Listing './lib/python3.5/site-packages/cleo/inputs'...
Listing './lib/python3.5/site-packages/cleo/outputs'...
Listing './lib/python3.5/site-packages/cleo/questions'...
Listing './lib/python3.5/site-packages/cleo/styles'...
Listing './lib/python3.5/site-packages/cleo/testers'...
Listing './lib/python3.5/site-packages/cleo/validators'...
Listing './lib/python3.5/site-packages/cleo-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/first-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pastel'...
Listing './lib/python3.5/site-packages/pastel-0.1.0.dist-info'...
Listing './lib/python3.5/site-packages/pathlib2-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip_tools-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/piptools'...
Listing './lib/python3.5/site-packages/piptools/_compat'...
Listing './lib/python3.5/site-packages/piptools/repositories'...
Listing './lib/python3.5/site-packages/piptools/scripts'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pkginfo'...
Listing './lib/python3.5/site-packages/pkginfo/tests'...
Listing './lib/python3.5/site-packages/pkginfo-1.4.1.dist-info'...
Listing './lib/python3.5/site-packages/poet'...
Listing './lib/python3.5/site-packages/poet/build'...
Listing './lib/python3.5/site-packages/poet/console'...
Listing './lib/python3.5/site-packages/poet/console/commands'...
Listing './lib/python3.5/site-packages/poet/console/commands/make'...
Listing './lib/python3.5/site-packages/poet/exceptions'...
Listing './lib/python3.5/site-packages/poet/package'...
Listing './lib/python3.5/site-packages/poet/repositories'...
Listing './lib/python3.5/site-packages/poet/templates'...
Listing './lib/python3.5/site-packages/poet/utils'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/pylev-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pypoet-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_toolbelt'...
Listing './lib/python3.5/site-packages/requests_toolbelt/adapters'...
Listing './lib/python3.5/site-packages/requests_toolbelt/auth'...
Listing './lib/python3.5/site-packages/requests_toolbelt/cookies'...
Listing './lib/python3.5/site-packages/requests_toolbelt/downloadutils'...
Listing './lib/python3.5/site-packages/requests_toolbelt/multipart'...
Listing './lib/python3.5/site-packages/requests_toolbelt/threaded'...
Listing './lib/python3.5/site-packages/requests_toolbelt/utils'...
Listing './lib/python3.5/site-packages/requests_toolbelt-0.7.1.dist-info'...
Listing './lib/python3.5/site-packages/semantic_version'...
Listing './lib/python3.5/site-packages/semantic_version-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/toml-0.9.4.egg-info'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './lib/python3.5/site-packages/twine'...
Listing './lib/python3.5/site-packages/twine/commands'...
Listing './lib/python3.5/site-packages/twine-1.9.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/test'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist/complexdist'...
Listing './lib/python3.5/site-packages/wheel/test/headers.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist/simpledist'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.29.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
